Update file hierarchy

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "node-asuran-db",
   "version": "0.0.1",
   "description": "Lightweight ORM supporting revision with user action traceability for Typescript and MariaDB",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
