--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "lib",
-    "target": "es6",
+    "target": "ES2018",
     "moduleResolution": "node",
     "module": "commonjs",
     "noImplicitAny": true,
